ocp local link update

--- a/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
+++ b/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
@@ -14,7 +14,7 @@ You can create a single-node OpenShift cluster for deploying a {prod-short} inst
 
 * `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
-* A running instance of {rh-os-local}. See link:https://console.redhat.com/openshift/create/local[Installing {rh-os-local}].```
+* A running instance of {rh-os-local}. See link:https://developers.redhat.com/products/openshift-local/overview[{rh-os-local} overview].```
 
 * The file path of the user's {rh-os-local} pull secret.
 
@@ -77,4 +77,4 @@ $ {prod-cli} dashboard:open
 
 .Additional resources
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_openshift_local/[Product documentation for {rh-os-local}].
+* link:https://developers.redhat.com/products/openshift-local/overview[{rh-os-local}].
