docs: Adding a warning about Microsoft's ToS (#2833)
* docs: Adding a warning about Microsoft's ToS

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

* Update modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc

---------

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
+++ b/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
@@ -22,6 +22,11 @@ spec:
        openVSXURL: __<your_open_vsx_registy>__
 # [...]
 ----
++
+[WARNING]
+====
+Due to the dedicated Microsoft link:https://cdn.vsassets.io/v/M190_20210811.1/_content/Microsoft-Visual-Studio-Marketplace-Terms-of-Use.pdf[Terms of Use], link:https://marketplace.visualstudio.com/vscode[Visual Studio Code Marketplace] is not supported by {prod}.
+====
 
 .Additional resources
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
