fix: Doc about installing ImagePuller
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -23,4 +23,5 @@ include::partial$snip_configuring-kubernetes-image-puller.adoc[]
 
 .Additional resources
 
+* xref:retrieving-default-list-of-images-for-kubernetes-image-puller.adoc[]
 * link:https://github.com/che-incubator/{image-puller-repository-name}[{image-puller-name} source code repository]
