--- a/modules/hosted-che/partials/ref_hosted-che-faq-and-troubleshooting.adoc
+++ b/modules/hosted-che/partials/ref_hosted-che-faq-and-troubleshooting.adoc
@@ -15,7 +15,8 @@ The common FAQs are available on the link:https://developers.redhat.com/develope
 
 .Authentication
 
-To authenticate to link:https://workspaces.openshift.com[Red Hat Developer Sandbox], allow cookies from the `static.developers.redhat.com` page. This authentication will fail in a scenario where these cookies are blocked by a browser extension such as link:https://www.eff.org/privacybadger[Privacy Badger].
+To authenticate to link:https://workspaces.openshift.com[Red Hat Developer Sandbox], allow cookies from the `static.developers.redhat.com` page. 
+WARNING: The authentication may fail if the the cookies are blocked by the browser extensions that interfere with cookie handling, such as ad-blockers or privacy-focused extensions.
 
 .Telemetry
 
