fix: Use correct references to tepmlates
Signed-off-by: RomanNikitenko <rnikiten@redhat.com>

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -178,12 +178,12 @@ It can be:
 . Define the page title, and the page file name: use lower case and separate words with dashes `__<title>__.adoc`.
 The directory and the file name determine the page URL.
 
-. Copy one of the templates in the `templates/pages` directory to `__<pages_directory>__/__<title>__.adoc`.
+. Copy one of the templates in the `templates/page` directory to `__<pages_directory>__/__<title>__.adoc`.
 +
-* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/assembly.adoc[Assembly page template]
-* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/concept.adoc[Concept page template]
-* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/procedure.adoc[Procedure page template]
-* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/reference.adoc[Reference page template]
+* link:https://github.com/eclipse/che-docs/blob/main/templates/page/assembly.adoc[Assembly page template]
+* link:https://github.com/eclipse/che-docs/blob/main/templates/page/concept.adoc[Concept page template]
+* link:https://github.com/eclipse/che-docs/blob/main/templates/page/procedure.adoc[Procedure page template]
+* link:https://github.com/eclipse/che-docs/blob/main/templates/page/reference.adoc[Reference page template]
 
 . Add a cross-reference to the page in the `modules/__<guide_name>__/nav.adoc` navigation file to create the link:https://docs.antora.org/antora/2.3/navigation/xrefs-and-link-text/#default-link-text[navigation entry].
 +
