docs: Apply editor configurations from a ConfigMap
Signed-off-by: RomanNikitenko <rnikiten@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -109,6 +109,7 @@
 ** xref:configuring-single-and-multiroot-workspaces.adoc[]
 ** xref:trusted-extensions-for-microsoft-visual-studio-code.adoc[]
 ** xref:default-extensions-for-microsoft-visual-studio-code.adoc[]
+** xref:editor-configurations-for-microsoft-visual-studio-code.adoc[]
 * xref:managing-workloads-using-the-che-server-api.adoc[]
 * xref:upgrading-che.adoc[]
 ** xref:upgrading-the-chectl-management-tool.adoc[]
