--- a/modules/administration-guide/pages/configuring-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/configuring-visual-studio-code.adoc
@@ -12,3 +12,4 @@ Learn how to configure Visual Studio Code - Open Source ("Code - OSS").
 * xref:configuring-single-and-multiroot-workspaces.adoc[]
 * xref:trusted-extensions-for-microsoft-visual-studio-code.adoc[]
 * xref:default-extensions-for-microsoft-visual-studio-code.adoc[]
+* xref:editor-configurations-for-microsoft-visual-studio-code.adoc[]
