--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -17,7 +17,7 @@ The following sections are currently supported:
 * extensions.json
 
 The `settings.json` section contains various settings that allow to customize different parts of the Code - OSS editor. +
-`extensions.json` section contains recommented extensions are installed when a workspace is started.
+The `extensions.json` section contains recommented extensions are installed when a workspace is started.
 
 .Procedure
 
