--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -55,7 +55,7 @@ immutable: false
 
 [NOTE]
 ====
-Ensure the Configmap contains data in a valid JSON format.
+Make sure that the Configmap contains data in a valid JSON format.
 ====
 
 .Verification
