Update formatting for ConfigMap sections
Signed-off-by: RomanNikitenko <rnikiten@redhat.com>

--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -21,7 +21,7 @@ The `extensions.json` section contains recommented extensions are installed when
 
 .Procedure
 
-* Add a new ConfigMap to the user's {orch-namespace}, define the `__settings.json__`  and `__extensions.json__` sections, specify the settings you want to add, and the IDs of the extensions you want to install.
+* Add a new ConfigMap to the user's {orch-namespace}, define the `settings.json`  and `extensions.json` sections, specify the settings you want to add, and the IDs of the extensions you want to install.
 +
 ====
 [source,yaml]
