fix: Update security best practices doc
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/pages/security-best-practices.adoc
+++ b/modules/administration-guide/pages/security-best-practices.adoc
@@ -60,10 +60,10 @@ All resources and actions you can grant users permission to use in their {namesp
 |"get", "list", "create"
 
 |configmaps
-|“get", "list", "create", "update", "patch", "delete"
+|"get", "list", "create", "update", "patch", "delete"
 
 |events
-|“watch”
+|"list", "watch"
 
 |secrets
 |"get", "list", "create", "update", "patch", "delete"
@@ -72,10 +72,10 @@ All resources and actions you can grant users permission to use in their {namesp
 |"get", "list", "create", "delete", "update", "patch"
 
 |routes
-|”get", "list", "create", "delete"
+|"get", "list", "create", "delete"
 
 |persistentvolumeclaims
-|“get", "list", "watch", "create", "delete", "update", "patch"
+|"get", "list", "watch", "create", "delete", "update", "patch"
 
 |apps/deployments
 |"get", "list", "watch", "create", "patch", "delete"
@@ -87,7 +87,7 @@ All resources and actions you can grant users permission to use in their {namesp
 |"get", "list"
 
 |projects
-|“get”
+|"get"
 
 |devworkspace
 |"get", "create", "delete", "list", "update", "patch", "watch"
@@ -215,8 +215,8 @@ spec:
 
 .Resource Quotas and Limit Ranges
 
-Resource Quotas and Limit Ranges are {kubernetes} features you can use to help prevent bad actors or resource abuse within a cluster.
-They help in controlling and managing resource consumption by pods and containers.
+Resource Quotas and Limit Ranges are {kubernetes} features you can use to help prevent bad actors and resource abuse within a cluster.
+Specifically, they allow you to set resource consumption constraints for pods and containers.
 By combining Resource Quotas and Limit Ranges,
 you can enforce project-specific policies to prevent bad actors from consuming excessive resources.
 
@@ -227,8 +227,7 @@ More details about link:https://docs.openshift.com/container-platform/4.14/appli
 
 An air-gapped OpenShift disconnected cluster refers to an OpenShift cluster
 isolated from the internet or any external network.
-This isolation is often done for security reasons,
-to protect sensitive or critical systems from potential cyber threats.
+This isolation is often done for security reasons to protect sensitive or critical systems from potential cyber threats.
 In an air-gapped environment,
 the cluster cannot access external repositories or registries to download container images, updates, or dependencies.
 
@@ -239,7 +238,7 @@ include::example$snip_che-installation-instructions.adoc[]
 
 By default, {prod}
 includes the embedded Open VSX registry
-which contains a limited set of extensions used by Microsoft Visual Studio Code -
+which contains a limited set of extensions for the Microsoft Visual Studio Code -
 Open Source editor.
 Alternatively, cluster administrators can specify a different plugin registry in the Custom Resource, e.g.
 https://open-vsx.org that contains thousands of extensions.
