Add Microsoft DevAzure Server notes

--- a/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
@@ -16,6 +16,9 @@ pass:[<!-- vale RedHat.Spelling = YES -->]
 . Set up the Microsoft Azure DevOps Services OAuth App (OAuth 2.0).
 . Apply the Microsoft Azure DevOps Services OAuth App Secret.
 
+[IMPORTANT]
+Microsoft DevAzure Server does not support oAuth2, see link:https://learn.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/oauth?view=azure-devops[the documentation page].
+
 include::partial$proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc[leveloffset=+1]
 
 include::partial$proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc[leveloffset=+1]
