--- a/modules/administration-guide/pages/permissions-to-install-che.adoc
+++ b/modules/administration-guide/pages/permissions-to-install-che.adoc
@@ -1,7 +1,7 @@
 :_content-type: ASSEMBLY
 :description: Permissions to install {prod}
 :keywords: administration-guide, installing, permissions
-:navtitle: Permissions to install Che
+:navtitle: Permissions to install {prod-short}
 :page-aliases:
 
 [id="permissions-to-install-che"]
