moved security best practices from overview to admin guide

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -1,5 +1,6 @@
 .Administration Guide
 
+* xref:security-best-practices.adoc[]
 * xref:preparing-the-installation.adoc[]
 ** xref:supported-platforms.adoc[]
 ** xref:installing-the-chectl-management-tool.adoc[]
