--- a/modules/administration-guide/examples/snip_che-curated-access.adoc
+++ b/modules/administration-guide/examples/snip_che-curated-access.adoc
@@ -1,4 +1,4 @@
 With this setup, you achieve a curated access to {prod-short},
 where cluster administrators control provisioning for each user
 and can explicitly configure various settings including resource limits and quotas.
-Learn more about project provisioning in the xref:administration-guide:provisioning-namespaces-in-advance.adoc[product documentation].
+Learn more about project provisioning in the xref:administration-guide:provisioning-namespaces-in-advance.adoc[].
