fix: Update security best practices doc (#2848)
* fix: Update security best practices doc

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Update xref

Signed-off-by: dkwon17 <dakwon@redhat.com>

---------

Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/examples/snip_che-curated-access.adoc
+++ b/modules/administration-guide/examples/snip_che-curated-access.adoc
@@ -1,4 +1,4 @@
 With this setup, you achieve a curated access to {prod-short},
 where cluster administrators control provisioning for each user
 and can explicitly configure various settings including resource limits and quotas.
-Learn more about project provisioning in the link:https://eclipse.dev/che/docs/stable/administration-guide/mounting-a-secret-as-a-file-or-an-environment-variable-into-a-container/#mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container[product documentation].
+Learn more about project provisioning in the xref:administration-guide:provisioning-namespaces-in-advance.adoc[].
