docs: Open workspace in Visual Studio Code desktop
Signed-off-by: vitaliy-guliy <vgulyy@redhat.com>

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -27,6 +27,7 @@
 * xref:devfile-introduction.adoc[]
 * xref:ides-in-workspaces.adoc[]
 ** xref:microsoft-visual-studio-code-open-source-ide.adoc[]
+** xref:connect-visual-studio-code-to-che-workspace.adoc[]
 ** xref:idea-ultimate.adoc[]
 ** xref:defining-a-common-ide.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
