docs: Open workspace in Visual Studio Code desktop
Signed-off-by: vitaliy-guliy <vgulyy@redhat.com>

--- a/modules/end-user-guide/pages/connect-visual-studio-code-to-che-workspace.adoc
+++ b/modules/end-user-guide/pages/connect-visual-studio-code-to-che-workspace.adoc
@@ -43,6 +43,16 @@ In the appeared pop-up click `Open Visual Studio Code - URL Handler` to confirm 
 +
 image::vscode-remote/confirm-opening-vscode-desktop.png[Open Gateway prompt,link="{imagesdir}/vscode-remote/confirm-opening-vscode-desktop.png"]
 
+[NOTE]
+====
+If you are not signed in yet, allow Visual Studio Code to sign in with the account you used to create the tunnel.
+====
+
+[TIP]
+====
+If Visual Studio Code opens your workspace with a delay, open *Remote Explorer*.
+====
+
 .Connecting Visual Studio Code to an existing workspace
 
 With link:https://code.visualstudio.com/docs/editor/command-line[Visual Studio Code Command Line Interface (CLI)] you can crate a tunnel to an existing workspace.
@@ -69,8 +79,9 @@ tar -xvzf /tmp/code.tar.gz --directory=/checode
 If you don't have `gzip` installed to your workspace, you won't be able to install the CLI using the above command.
 In this case you need to:
 
-- link:https://code.visualstudio.com/sha/download?build=stable&os=cli-alpine-x64[download CLI] to your desktop by hands,
+- link:https://code.visualstudio.com/Download[download CLI] for *Linux x64* architecture to your desktop,
 unpack and upload the extracted binary to your workspace root
+
 - move CLI binary to `/checode` directory and make in executable
 
 [source,shell,subs="attributes+"]
@@ -98,8 +109,8 @@ With buttons on the right, open your workspace in a current or in a new window.
 +
 image::vscode-remote/vscode-remote-explorer.png[Open Gateway prompt,link="{imagesdir}/vscode-remote/vscode-remote-explorer.png"]
 
-[IMPORTANT]
+[NOTE]
 ====
 A tunnel to your workspace will not appear if you are not signed in yet.
-If so, sign in using the account you are used to create a tunnel.
+If so happened, sign in using the account you are used to create a tunnel.
 ====
