docs: Open workspace in Visual Studio Code desktop
Signed-off-by: vitaliy-guliy <vgulyy@redhat.com>

--- a/modules/end-user-guide/pages/connect-visual-studio-code-to-che-workspace.adoc
+++ b/modules/end-user-guide/pages/connect-visual-studio-code-to-che-workspace.adoc
@@ -50,7 +50,7 @@ If you are not signed in yet, allow Visual Studio Code to sign in with the accou
 
 [TIP]
 ====
-If Visual Studio Code opens your workspace with a delay, open *Remote Explorer*.
+If Visual Studio Code opens your workspace with a delay, open *Remote Explorer* view.
 ====
 
 .Connecting Visual Studio Code to an existing workspace
