Apply suggestions from code review
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/end-user-guide/pages/connect-visual-studio-code-to-che-workspace.adoc
+++ b/modules/end-user-guide/pages/connect-visual-studio-code-to-che-workspace.adoc
@@ -6,7 +6,7 @@
 
 .Connecting Visual Studio Code desktop to a new workspace
 
-The following steps will help you to connect your workspace with your local Visual Studio Code.
+Follow the steps below to connect a new workspace with your local Visual Studio Code.
 
 .Prerequisites
 
@@ -14,7 +14,7 @@ The following steps will help you to connect your workspace with your local Visu
 
 .Procedure
 
-. Create a workspace on the {prod-short} Dashboard and choose `Visual Studio Code (desktop)` editor.
+. Create a workspace on the {prod-short} Dashboard and choose *Visual Studio Code (desktop)* as your editor.
 +
 image::vscode-remote/select-editor.png[IntelliJ IDEA Ultimate on Dashboard,link="{imagesdir}/vscode-remote/select-editor.png"]
 
@@ -23,29 +23,29 @@ image::vscode-remote/select-editor.png[IntelliJ IDEA Ultimate on Dashboard,link=
 image::vscode-remote/login.png[Open Gateway prompt,link="{imagesdir}/vscode-remote/login.png"]
 +
 
-. Proceed the login using your Microsoft or GitHub account.
+. Log in with your Microsoft or GitHub account.
 +
-Click `Copy & Continue to Microsoft` or `Copy & Continue to GitHub` button in the appeared dialog to copy the authentication code to the clipboard and open the authenticating pop-up.
+Click the *Copy & Continue to Microsoft* or *Copy & Continue to GitHub* button to copy the authentication code to the clipboard and to open the authenticating pop-up.
 +
 image::vscode-remote/login-with-provider.png[Open Gateway prompt,link="{imagesdir}/vscode-remote/login-with-provider.png"]
 
-. Complete authenticating.
+. Complete the authentication process.
 +
-In the appeared pop-up you can paste the code from the clipboard and follow the instructions.
-On successful authentication, close the pop-up and wait while a tunnel to your workspace will be created.
+Paste in the code from the clipboard and follow the instructions.
+On successful authentication, close the pop-up and wait for the tunnel to your workspace to be created.
 +
 image::vscode-remote/open-visual-studio-code.png[Open Gateway prompt,link="{imagesdir}/vscode-remote/open-visual-studio-code.png"]
 
 . Open your workspace in Visual Studio Code desktop.
 +
-Click `Open in Visual Studio Code desktop` to open your workspace in your desktop Visual Studio Code.
-In the appeared pop-up click `Open Visual Studio Code - URL Handler` to confirm opening the desktop application.
+Click *Open in Visual Studio Code desktop* to open your workspace in the desktop version of Visual Studio Code.
+Confirm opening the desktop application by clicking *Open Visual Studio Code - URL Handler*.
 +
 image::vscode-remote/confirm-opening-vscode-desktop.png[Open Gateway prompt,link="{imagesdir}/vscode-remote/confirm-opening-vscode-desktop.png"]
 
 [NOTE]
 ====
-If you are not signed in yet, allow Visual Studio Code to sign in with the account you used to create the tunnel.
+If you are not signed in yet, allow Visual Studio Code to sign in with the same account you used to create the tunnel.
 ====
 
 [TIP]
@@ -55,7 +55,7 @@ If Visual Studio Code opens your workspace with a delay, open *Remote Explorer* 
 
 .Connecting Visual Studio Code to an existing workspace
 
-With link:https://code.visualstudio.com/docs/editor/command-line[Visual Studio Code Command Line Interface (CLI)] you can crate a tunnel to an existing workspace.
+With link:https://code.visualstudio.com/docs/editor/command-line[Visual Studio Code Command Line Interface (CLI)] you can create a tunnel to an existing workspace.
 
 .Prerequisites
 
@@ -64,9 +64,9 @@ With link:https://code.visualstudio.com/docs/editor/command-line[Visual Studio C
 
 .Procedure
 
-. Install Visual Studio Code CLI to your workspace.
+. Install Visual Studio Code CLI in your workspace.
 +
-Open a terminal and run the following command to install Visual Studio Code CLI to `/checode` directory.
+Open a terminal and run the following command to install Visual Studio Code CLI in the `/checode` directory.
 +
 [source,shell,subs="attributes+"]
 ----
@@ -76,13 +76,13 @@ tar -xvzf /tmp/code.tar.gz --directory=/checode
 +
 [IMPORTANT]
 ====
-If you don't have `gzip` installed to your workspace, you won't be able to install the CLI using the above command.
+If you don't have `gzip` installed in your workspace, you won't be able to install the CLI using the command above.
 In this case you need to:
 
-- link:https://code.visualstudio.com/Download[download CLI] for *Linux x64* architecture to your desktop,
-unpack and upload the extracted binary to your workspace root
+. link:https://code.visualstudio.com/Download[Download CLI] for *Linux x64* architecture to your desktop,
+unpack and upload the extracted binary to your workspace root.
 
-- move CLI binary to `/checode` directory and make in executable
+. Move CLI binary to `/checode` directory and make it executable:
 
 [source,shell,subs="attributes+"]
 ----
@@ -91,7 +91,7 @@ mv $PROJECT_SOURCE/code /checode && chmod +x /checode/code
 
 ====
 
-. Launch CLI and login using your Microsoft or GitHub account.
+. Launch the Visual Studio Code CLI and log in using your Microsoft or GitHub account.
 +
 [source,shell,subs="attributes+"]
 ----
@@ -104,13 +104,13 @@ After successful login, you will be prompted to open the workspace in your brows
 
 . Open your workspace in local Visual Studio Code.
 +
-Open your local Visual Studio Code and navigate to `Remote Explorer` view, a new tunnel to your workspace should appear.
-With buttons on the right, open your workspace in a current or in a new window.
+Open your local Visual Studio Code and navigate to *Remote Explorer* view. A tunnel to your workspace will appear.
+With the buttons on the right, open your workspace in the current or a new window.
 +
 image::vscode-remote/vscode-remote-explorer.png[Open Gateway prompt,link="{imagesdir}/vscode-remote/vscode-remote-explorer.png"]
 
 [NOTE]
 ====
 A tunnel to your workspace will not appear if you are not signed in yet.
-If so happened, sign in using the account you are used to create a tunnel.
+Sign in using the same account you used to create the tunnel.
 ====
