fix: fix case of kubectl create secret tls
TLS does not work.

--- a/modules/administration-guide/pages/configuring-che-hostname.adoc
+++ b/modules/administration-guide/pages/configuring-che-hostname.adoc
@@ -32,7 +32,7 @@ $ {orch-cli} create {orch-namespace} {prod-namespace}
 +
 [subs="+quotes,attributes"]
 ----
-$ {orch-cli} create secret TLS __<tls_secret_name>__ \ <1>
+$ {orch-cli} create secret tls __<tls_secret_name>__ \ <1>
 --key __<key_file>__ \ <2>
 --cert __<cert_file>__ \ <3>
 -n {prod-namespace}
