--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -43,6 +43,11 @@ If the extension publisher is unavailable or unwilling to publish the extension 
 ====
 
 .. Using {prod-short} instance:
++
+[IMPORTANT]
+====
+For IBM Power (`ppc64le`) and IBM Z (`s390x`), the custom plugin registry is expected to be built locally on the corresponding architecture.
+====
 
 ... Login to your {prod-short} instance as an administrator.
 
