--- a/modules/administration-guide/pages/enabling-fuse-for-all-workspaces.adoc
+++ b/modules/administration-guide/pages/enabling-fuse-for-all-workspaces.adoc
@@ -7,7 +7,7 @@
 [id="enabling-fuse-overlayfs-for-all-workspaces"]
 = Enabling fuse-overlayfs for all workspaces
 
-Learn about configuring the workspace's container entrypoint script so that fuse-overlayfs is used for all workspaces using that container.
+Learn how to configure the workspace's container entrypoint script so that you can use fuse-overlayfs for all workspaces using that container.
 
 The Universal Developer Image (UDI) already contains the necessary configuration by default.
 However, you must configure the script manually if you use custom images due to Podman 5.x requiring the `/home/user/.config` folder to be owned by the current user.
