updated supported ides table

--- a/modules/end-user-guide/pages/ides-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/ides-in-workspaces.adoc
@@ -13,11 +13,37 @@ The default IDE in a new workspace is Microsoft Visual Studio Code - Open Source
 
 .Supported IDEs 
 
-[cols="1,1a,1a"]
+[cols="1,1a,1a,1a"]
 |===
-| IDE | `id` | Note
+| IDE | Status | `id` | Note
 
-include::example$snip_{project-context}-table-of-supported-editors.adoc[]
+| link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source]
+| Available
+|
+* `che-incubator/che-code/latest`
+* `che-incubator/che-code/insiders`
+|
+* `latest` is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
+* `insiders` is the development version.
+
+| link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA Community Edition]
+| Deprecated
+|
+* `che-incubator/che-idea/latest`
+* `che-incubator/che-idea/next`
+|
+* `latest` is the stable version.
+* `next` is the development version.
+
+| link:https://github.com/redhat-developer/devspaces-gateway-plugin/[JetBrains IntelliJ IDEA Ultimate Edition
+(over JetBrains Gateway)]
+| Technology Preview
+|
+* `che-incubator/che-idea-server/latest`
+* `che-incubator/che-idea-server/next`
+|
+* `latest` is the stable version.
+* `next` is the development version.
 
 |===
 
@@ -25,6 +51,6 @@ include::example$snip_{project-context}-table-of-supported-editors.adoc[]
 
 You can store IDE configuration files directly in the remote Git repository that contains your project source code. This way, one common IDE configuration is applied to all new workspaces that feature a clone of that repository. Such IDE configuration files might include the following:
 
-* xref:defining-a-common-ide.adoc[The `/.che/che-editor.yaml` file] that stores a definition of the chosen IDE.
+* xref:defining-a-common-ide.adoc[The /.che/che-editor.yaml file] that stores a definition of the chosen IDE.
 
-* IDE-specific configuration files that one would typically store locally for a desktop IDE. For example, xref:microsoft-visual-studio-code-open-source-ide.adoc[the `/.vscode/extensions.json` file.]
+* IDE-specific configuration files that one would typically store locally for a desktop IDE. For example, xref:microsoft-visual-studio-code-open-source-ide.adoc[the /.vscode/extensions.json file.]
