--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -4,11 +4,38 @@
 The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id` of an IDE from the table of supported IDEs:
 
 .Supported IDEs
-[cols="1,1a,1a"]
-|===
-| IDE | `id` | Note
 
-include::example$snip_{project-context}-table-of-supported-editors.adoc[]
+[cols="1,1a,1a,1a"]
+|===
+| IDE | Status | `id` | Note
+
+| link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source]
+| Available
+|
+* `che-incubator/che-code/latest`
+* `che-incubator/che-code/insiders`
+|
+* `latest` is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
+* `insiders` is the development version.
+
+| link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA Community Edition]
+| Deprecated
+|
+* `che-incubator/che-idea/latest`
+* `che-incubator/che-idea/next`
+|
+* `latest` is the stable version.
+* `next` is the development version.
+
+| link:https://github.com/redhat-developer/devspaces-gateway-plugin/[JetBrains IntelliJ IDEA Ultimate Edition
+(over JetBrains Gateway)]
+| Technology Preview
+|
+* `che-incubator/che-idea-server/latest`
+* `che-incubator/che-idea-server/next`
+|
+* `latest` is the stable version.
+* `next` is the development version.
 
 |===
 
