feat: allow to configure product.json using configmap
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -15,9 +15,11 @@ The following sections are currently supported:
 
 * settings.json
 * extensions.json
+* product.json
 
-The `settings.json` section contains various settings that allow to customize different parts of the Code - OSS editor. +
-The `extensions.json` section contains recommented extensions are installed when a workspace is started.
+The *settings.json* section contains various settings that allow to customize different parts of the Code - OSS editor. +
+The *extensions.json* section contains recommended extensions are installed when a workspace is started. +
+The *product.json* section contains properties that you need to add to the editor's *product.json* file. If the property already exists, its value will be updated.
 
 .Procedure
 
@@ -47,6 +49,19 @@ data:
         "titleBar.activeForeground": "#ffffff"
       }
     }
+  product.json: |
+    {
+      "extensionEnabledApiProposals": {
+        "ms-python.python": [
+          "contribEditorContentMenu",
+          "quickPickSortByLabel",
+        ]
+      },
+      "trustedExtensionAuthAccess": [
+        "<publisher1>.<extension1>",
+        "<publisher2>.<extension2>"
+      ]
+    }
 immutable: false
 ----
 ====
@@ -67,4 +82,7 @@ Make sure that the Configmap contains data in a valid JSON format.
 * Go to the `Extensions` view (`F1 → View: Show Extensions`) and check that the extensions are installed
 * Ensure that the extensions from the ConfigMap are present in the `.code-workspace` file by using the `F1 → File: Open File...` command. By default, the workspace file is placed at `/projects/.code-workspace`.
 
-
+. Verify that product properties defined in the ConfigMap are being added to the Visual Studio Code *product.json*:
+* Open a terminal, run the command `cat /checode/entrypoint-logs.txt | grep "Node.js dir"` and copy the Visual Studio Code path.
+* Press `Ctrl + O`, paste the copied path and open *product.json* file.
+* Ensure that *product.json* file contains all the properties defined in the ConfigMap.
