chore: Add labels to prevent mounting CM into user containers
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -34,7 +34,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: vscode-editor-configurations
-data: 
+  labels:
+    controller.devfile.io/watch-configmap: "false"
+    controller.devfile.io/mount-to-devworkspace: "false"
+data:
   extensions.json: |
     {
       "recommendations": [
