chore: Add labels to prevent mounting CM into user containers
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/editor-configurations-for-microsoft-visual-studio-code.adoc
@@ -35,8 +35,7 @@ kind: ConfigMap
 metadata:
   name: vscode-editor-configurations
   labels:
-    controller.devfile.io/watch-configmap: "false"
-    controller.devfile.io/mount-to-devworkspace: "false"
+     app.kubernetes.io/part-of: che.eclipse.org
 data:
   extensions.json: |
     {
