Minor wording updates
Signed-off-by: dkwon17-test <dakwon@redhat.com>

--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -16,7 +16,7 @@ Therefore, you must import into {prod-short} all untrusted CA chains in use by a
 * A source code repositories provider (Git)
 
 {prod-short} uses labeled ConfigMaps in {prod-short} {orch-namespace} as sources for TLS certificates.
-The ConfigMaps can have an arbitrary amount of keys with a random amount of certificates each.
+The ConfigMaps can have an arbitrary amount of keys with an arbitrary amount of certificates each.
 All certificates are mounted into:
 
 * `/public-certs` location of {prod-short} server and dashboard pods
